<?xml version="1.0"?>
<package>
  <name>jsk_apc2016_common</name>
  <version>0.2.3</version>
  <description>The jsk_apc2016_common package</description>

  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslint</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
