<?xml version="1.0"?>
<package>
  <name>jsk_apc2016_common</name>
  <version>4.2.0</version>
  <description>The jsk_apc2016_common package</description>

  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <maintainer email="pazeshun3684@gmail.com">Hasegawa Shun</maintainer>
  <maintainer email="shingogo@hotmail.co.jp">Shingo Kitagawa</maintainer>
  <maintainer email="bowofvinderre@gmail.com">Bando Masahiro</maintainer>
  <maintainer email="niitani@jsk.imi.i.u-tokyo.ac.jp">Yusuke Niitani</maintainer>
  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>
  <license>BSD</license>
  <url>http://wiki.ros.org/jsk_apc2016_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>jsk_data</build_depend>
  <build_depend>jsk_gui_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>message_filters</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>resource_retriever</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>jsk_data</run_depend>
  <run_depend>jsk_gui_msgs</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_eigen</run_depend>
  <run_depend>pcl_ros</run_depend>

  <test_depend>jsk_tools</test_depend>
  <test_depend>roslint</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>

</package>
