<?xml version="1.0"?>
<package>
  <name>jsk_arc2017_baxter</name>
  <version>2.0.0</version>
  <description>Baxter-specific programs for Amazon Robotics Challenge 2017 at JSK Lab.</description>

  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>

  <license>BSD</license>
  <url>http://wiki.ros.org/jsk_arc2017_baxter</url>

  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>jsk_2016_01_baxter_apc</run_depend>
  <run_depend>jsk_data</run_depend>
  <run_depend>jsk_perception</run_depend>
  <run_depend>jsk_rqt_plugins</run_depend>
  <run_depend>jsk_topic_tools</run_depend>

  <export>
  </export>
</package>
