<?xml version="1.0"?>
<package>
  <name>jsk_arc2017_baxter</name>
  <version>4.1.4</version>
  <description>Baxter-specific programs for Amazon Robotics Challenge 2017 at JSK Lab.</description>

  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>

  <license>BSD</license>
  <url>http://wiki.ros.org/jsk_arc2017_baxter</url>

  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>
  <author email="shingogo@hotmail.co.jp">Shingo Kitagawa</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>force_proximity_ros</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>jsk_2016_01_baxter_apc</build_depend>
  <build_depend>jsk_apc2016_common</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>force_proximity_ros</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>jsk_2015_05_baxter_apc</run_depend>
  <run_depend>jsk_2016_01_baxter_apc</run_depend>
  <run_depend>jsk_apc2015_common</run_depend>
  <run_depend>jsk_apc2016_common</run_depend>
  <run_depend>jsk_arc2017_common</run_depend>
  <run_depend>jsk_baxter_startup</run_depend>
  <run_depend>jsk_data</run_depend>
  <run_depend>jsk_interactive_marker</run_depend>
  <run_depend>jsk_perception</run_depend>
  <run_depend>jsk_recognition_utils</run_depend>
  <run_depend>jsk_rqt_plugins</run_depend>
  <run_depend>jsk_rviz_plugins</run_depend>
  <run_depend>jsk_topic_tools</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roseus_smach</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>smach_viewer</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>xacro</run_depend>

  <test_depend>jsk_tools</test_depend>

  <export>
  </export>
</package>
