<?xml version="1.0"?>
<package format="3">
  <name>jsk_arc2017_common</name>
  <version>4.3.0</version>
  <description>Common package for Amazon Robotics Challenge 2017 at JSK Lab.</description>

  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>

  <license>BSD</license>
  <url>http://wiki.ros.org/jsk_arc2017_common</url>

  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>
  <author email="shingogo@hotmail.co.jp">Shingo Kitagawa</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>jsk_data</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roseus</build_depend>

  <exec_depend>jsk_apc2016_common</exec_depend>
  <exec_depend>jsk_data</exec_depend>
  <exec_depend>jsk_pcl_ros</exec_depend>
  <exec_depend>jsk_pcl_ros_utils</exec_depend>
  <exec_depend>jsk_perception</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-serial</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-serial</exec_depend>
  <exec_depend>rospy</exec_depend>

  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
