<?xml version="1.0"?>
<package format="3">
  <name>dualarm_grasping</name>
  <version>4.3.0</version>
  <description>The dualarm_grasping package</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-chainer-pip</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-chainer-pip</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==2">python-fcn-pip</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION==3">python3-fcn-pip</exec_depend>
  <exec_depend>jsk_2015_05_baxter_apc</exec_depend>
  <exec_depend>jsk_2016_01_baxter_apc</exec_depend>
  <exec_depend>jsk_arc2017_baxter</exec_depend>
  <exec_depend>jsk_arc2017_common</exec_depend>
  <exec_depend>jsk_data</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>roseus_smach</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
