<?xml version="1.0"?>
<package>
  <name>dualarm_grasping</name>
  <version>4.3.0</version>
  <description>The dualarm_grasping package</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>python-chainer-pip</run_depend>
  <run_depend>python-fcn-pip</run_depend>
  <run_depend>jsk_2015_05_baxter_apc</run_depend>
  <run_depend>jsk_2016_01_baxter_apc</run_depend>
  <run_depend>jsk_arc2017_baxter</run_depend>
  <run_depend>jsk_arc2017_common</run_depend>
  <run_depend>jsk_data</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>roseus_smach</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
